feat: Agentic RAG V16 [tool-loop agent] 26.07.03.